--- a/views/components/toolbar/accountSidebar.pug
+++ b/views/components/toolbar/accountSidebar.pug
@@ -1,4 +1,4 @@
-include ../list/iconLinkList
+include ../list/iconElementList
 
 .account-sidebar.sidebar.-closed
     .sidebar__title Account
@@ -7,18 +7,26 @@ include ../list/iconLinkList
             .account-sidebar__avatar
                 img(src='/images/profileIcon.png')
             .account-sidebar__username= mainUser.username
-        +iconLinkList(
+        +iconElementList(
             [{
+                'tag': 'a',
                 'icon': '/images/profileIcon.png',
-                'href': `/users/${mainUser.username}`,
-                'label': 'Your Profile'     
+                'label': 'Your Profile',
+                'attrs': {
+                    'href': `/users/${mainUser.username}`,
+                    'class': '-gap-small'
+                }
             }]
         )
-        +iconLinkList(
+        +iconElementList(
             [{
+                'tag': 'a',
                 'icon': '/images/blogPostIcon.png',
-                'href': `/users/${mainUser.username}/blog-posts`,
-                'label': 'Your Blog Posts'
+                'label': 'Your Blog Posts',
+                'attrs': {
+                    'href': `/users/${mainUser.username}/blog-posts`,
+                    'class': '-gap-small'
+                }
             }]
         )
         .account-sidebar__logout
