Fixed iconElement class overwrite bug

--- a/views/components/card/blogPostCard.pug
+++ b/views/components/card/blogPostCard.pug
@@ -38,7 +38,8 @@ mixin blogPostCard(blogPost, attrs={})
           },
           'iconElement': {
             'class': [
-              '-small'
+              '-small',
+              '-gap-small'
             ]
           }
         }
