Added untested comment logic

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -32,6 +32,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: colors.$textLight;
+  scroll-behavior: smooth;
 }
 
 a {
