--- a/public/stylesheets/pages/_blog-post.scss
+++ b/public/stylesheets/pages/_blog-post.scss
@@ -20,7 +20,7 @@
         border-bottom: 2px solid colors.$bg2;
     }
 
-    &__reply {
+    &__reply-container {
         margin-left: 4rem;
     }
 }
